# packages/trpc/models/bookmarks.ts
@@ -214,6 +214,7 @@ export class Bookmark extends BareBookmark {
         }),
         crawledAt: link.crawledAt,
         crawlStatus: link.crawlStatus,
+        videoDownloadStatus: link.videoDownloadStatus,
         author: link.author,
         publisher: link.publisher,
         datePublished: link.datePublished,
@@ -737,6 +738,7 @@ export class Bookmark extends BareBookmark {
                   row.assets?.assetType === AssetTypes.LINK_SCREENSHOT,
               }),
               crawlStatus: row.bookmarkLinks.crawlStatus,
+              videoDownloadStatus: row.bookmarkLinks.videoDownloadStatus,
               crawledAt: row.bookmarkLinks.crawledAt,
               author: row.bookmarkLinks.author,
               publisher: row.bookmarkLinks.publisher,
